--- a/public/src/components/App/global.scss
+++ b/public/src/components/App/global.scss
@@ -16,6 +16,9 @@ $blue: #6da3d9;
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700');
 $montserrat:'Montserrat', sans-serif;
 
+@import url('https://fonts.googleapis.com/css?family=Rajdhani&display=swap');
+$rajdhani: 'Rajdhani', sans-serif;
+
 @import url('https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap');
 $hepta: 'Hepta Slab', serif;
 
@@ -33,7 +36,7 @@ html, body {
   padding: 0;
   z-index: 1;
   max-width: 100%;
-  height: auto;
+  height: 100%;
   overflow-x: hidden;
 }
 h3 {
