--- a/public/src/components/Home/Home__Landing/landing.scss
+++ b/public/src/components/Home/Home__Landing/landing.scss
@@ -55,7 +55,14 @@
   //   margin-top: -1%;
   // }
 }
-
+.typography {
+  position: absolute;
+  left: 15%;
+}
+.palette {
+  position: absolute;
+  right: 15%;
+}
 
 .mouse {
   color: white;
