--- a/public/src/components/Home/Home__Landing/landing.scss
+++ b/public/src/components/Home/Home__Landing/landing.scss
@@ -52,9 +52,9 @@
   flex-direction: column;
   transform: scale(.33);
 
-  // .bottom {
-  //   margin-top: -1%;
-  // }
+  .bottom {
+    margin-top: -1%;
+  }
 }
 .landing__parallax {
   width: 100%;
@@ -76,7 +76,7 @@
   z-index: 1;
   position: absolute;
   left: 35%;
-  bottom: 15%;
+  bottom: 20%;
   text-transform: uppercase;
   font: 700 30px/27px $rajdhani;
   letter-spacing: 5px;
