--- a/public/src/components/Home/Home__Landing/landing.scss
+++ b/public/src/components/Home/Home__Landing/landing.scss
@@ -22,7 +22,7 @@
   position: relative;
   z-index: 0;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   overflow: hidden;
 }
 
@@ -33,27 +33,32 @@
   color: white;
   text-align: center;
   padding-top: 50%;
+  opacity: 0;
 }
 
 .landing__rect__svg {
+  transform: scale(.85);
   position: absolute;
 }
 .landing__hero {
   transform: scale(.75);
   position: absolute;
+  // opacity: 0;
 }
 .landing__overlay {
   position: absolute;
 }
 .landing__cutoff {
-  top: 30%;
+  opacity: 0;
+  top: 34%;
   position: absolute;
   display: flex;
   flex-direction: column;
   transform: scale(.33);
 
   .bottom {
-    margin-top: -1%;
+    margin-top: -.9%;
+    // transform: translateX();
   }
 }
 .landing__parallax {
@@ -107,10 +112,11 @@
     left: 47%;
     bottom: 10%;
   }
-  .landing__hero {
+  .landing__hero, .landing__rect__svg {
     transform: scale(1);
   }
   .landing {
+    height: 100vh;
     justify-content: center;
   }
   .landing__cutoff {
