--- a/public/src/components/Home/Home__Landing/landing.scss
+++ b/public/src/components/Home/Home__Landing/landing.scss
@@ -15,7 +15,8 @@
 }
 
 .landing {
-  background: #1F1F1F;
+  // background: #1F1F1F;
+  background: black;
   display: flex;
   flex-direction: column;
   align-items: center;
