--- a/public/src/components/Home/Home__Transition/transition.scss
+++ b/public/src/components/Home/Home__Transition/transition.scss
@@ -12,6 +12,7 @@
   width: 100vw;
   height: 50vh;
   background: url(../../../../dist/assets/scrollText.png.svg);
+  background-color: white;
   background-repeat: repeat;
   background-size: auto;
   animation: 20s linear infinite slide;
