--- a/public/src/components/Navbar/navbar.scss
+++ b/public/src/components/Navbar/navbar.scss
@@ -21,6 +21,9 @@
   mix-blend-mode: exclusion;
   text-decoration: none;
 }
+.logo__button {
+  text-decoration: none;
+}
 .glitch {
   position: relative;
   text-transform: uppercase;
