--- a/public/src/components/Footer/footer.scss
+++ b/public/src/components/Footer/footer.scss
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   border-top: 4px solid #E5298F;
-  padding: 10% 0 0;
+  padding: 5% 0;
 }
 .footer__glitch {
   position: relative;
@@ -40,18 +40,65 @@
 .footer__glitch::before {
   left: 2px;
   text-shadow: -1px 0 red;
-  background: black;
+  background: #1F1F1F;
   clip: rect(44px, 450px, 56px, 0);
   animation: noise-anim 2s infinite linear alternate-reverse;
 }
 .footer__glitch::after {
   left: -2px;
   text-shadow: -1px 0 blue;
-  background: black;
+  background: #1F1F1F;
   animation: noise-anim 2s infinite linear alternate-reverse;
 }
 .footer__subheader {
   font: 400 50px $rajdhani;
   color: $white;
   text-transform: uppercase;
+  opacity: .8;
+  margin: 3% 0;
+}
+.footer__nav {
+  display: flex;
+  font: 500 50px $rajdhani;
+  border-top: $grey 3px solid;
+  opacity: .6;
+  padding-top: 3%;
+  
+  .footer__menu__item {
+    text-transform: uppercase;
+    color: $white;
+    text-decoration: none;
+    padding: 0 20px;
+    position: relative;
+  }
+  .footer__menu__item:hover::before,
+  .footer__menu__item:hover::after {
+    padding: 0 20px;
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .footer__menu__item:hover::before {
+    left: 2px;
+    text-shadow: -1px 0 red;
+    background: #1F1F1F;
+    clip: rect(44px, 450px, 56px, 0);
+    animation: noise-anim 2s infinite linear alternate-reverse;
+  }
+  .footer__menu__item:hover::after {
+    left: -2px;
+    text-shadow: -1px 0 blue;
+    background: #1F1F1F;
+    animation: noise-anim 2s infinite linear alternate-reverse;
+  }
+}
+
+
+@media only screen and (min-width: 1080px) {
+  .footer__nav {
+    flex-direction: row;
+  }
 }
