--- a/public/src/components/Footer/footer.scss
+++ b/public/src/components/Footer/footer.scss
@@ -18,7 +18,6 @@
   background: #1F1F1F;
   display: flex;
   flex-direction: column;
-  align-items: center;
   border-top: 4px solid #E5298F;
   padding: 5% 0;
 }
@@ -26,6 +25,7 @@
   position: relative;
   text-transform: uppercase;
   color: $white;
+  text-align: center;
   font: Bold 120px $rajdhani;
 }
 .footer__glitch::before,
@@ -51,16 +51,19 @@
   animation: noise-anim 2s infinite linear alternate-reverse;
 }
 .footer__subheader {
-  font: 400 50px $rajdhani;
+  font: 400 30px $rajdhani;
   color: $white;
   text-transform: uppercase;
   opacity: .8;
   margin: 3% 0;
+  padding: 0 20px;
 }
 .footer__nav {
   display: flex;
-  font: 500 50px $rajdhani;
+  font: 500 30px $rajdhani;
   border-top: $grey 3px solid;
+  flex-direction: column;
+
   opacity: .6;
   padding-top: 3%;
   
@@ -98,6 +101,12 @@
 
 
 @media only screen and (min-width: 1080px) {
+  .footer {
+    align-items: center;
+  }
+  .footer__subheader {
+    padding: 0;
+  }
   .footer__nav {
     flex-direction: row;
   }
