--- a/public/src/components/Home/Home__Works/works.scss
+++ b/public/src/components/Home/Home__Works/works.scss
@@ -8,48 +8,109 @@
   flex-direction: column;
   justify-content: center;
 }
-.home__works__grid {
-  width: 80%;
+.home__works__layout {
+	position: relative;
+	// display: flex;
+	// flex-direction: column;
+	// justify-content: center;
+  // align-items: center;
   margin: 0 auto;
+  width: 70%;
   display: grid;
-  justify-items: center;
   grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  // grid-template-areas: 
+  // "work ..."
+  // "... work";
+	// height: 100vh;
 }
-.home__work__content {
-  position: relative;
-  height: fit-content;
-  margin-bottom: 5%;
-  
-  .home__work__title {
-    font: 700 114px $rajdhani;
-    // color: #b1b1b1;
-    color: black;
-    // color: #BEBEBE;
-    position: absolute;
-    text-transform: uppercase;
-    top: 50%;
-    left: -10%;
-    opacity: 0;
-    transition: opacity .3s ease-in;
-    // mix-blend-mode: darken;
-  }
-  .home__work__image {
-    width: 700px;
-    height: auto;
-    border: 4px solid $darkGrey;
-    filter: brightness(1) grayscale(1) contrast(1);
-    // box-shadow: 0 20px 40px rgba(0, 0, 0, .3);
-    transition: filter .2s ease-out;
+.home__work__grid {
+  display: grid;
+  z-index: 0;
+	justify-content: center;
+	align-content: center;
+	grid-template-columns: repeat(4, 200px); 
+	grid-template-rows: repeat(3, 200px);
+  grid-template-areas:
+              // "... ... ... ..."
+              "image3 ... ... ..."
+              "... ... image2 image2";
+}
+.grid__image {
+  border: 4px solid $darkGrey;
+  // filter: grayscale(1);
+}
+.grid__image--1 {
+  width: 600px;
+  height: auto;
+  z-index: 2;
+  grid-column: 1 / 2;
+	grid-row: 1 / 3;
+	// opacity: 0.8;
+}
 
-  }
-  &:hover {
-    .home__work__image {
-      filter: brightness(1.5) grayscale(1) contrast(.5); 
-      border-color: #9D0F5C;
-  
-    }
-    .home__work__title {
-      opacity: 1;
-    }
-  }
+.grid__image--2 {
+  width: 200px;
+	grid-area: image2;
+	margin: 0;
+  z-index: 3;
+  margin-left: 20%;
 }
+.grid__image--3 {
+  grid-area: image3;
+  width: 300px;
+  margin-left: -40%;
+  margin-top: 50%;
+  z-index: 1;
+}
+.grid__image:hover {
+  filter: none;
+  border-color: #9D0F5C;
+}
+
+
+
+
+
+
+
+
+// .home__work__content {
+//   position: relative;
+//   height: fit-content;
+//   margin-bottom: 5%;
+  
+//   .home__work__title {
+//     font: 700 114px $rajdhani;
+//     // color: #b1b1b1;
+//     color: black;
+//     // color: #BEBEBE;
+//     position: absolute;
+//     text-transform: uppercase;
+//     top: 50%;
+//     left: -10%;
+//     opacity: 0;
+//     transition: opacity .3s ease-in;
+//     // mix-blend-mode: darken;
+//   }
+//   .home__work__image {
+//     width: 700px;
+//     height: auto;
+//     border: 4px solid $darkGrey;
+//     filter: brightness(1) grayscale(1) contrast(1);
+//     // box-shadow: 0 20px 40px rgba(0, 0, 0, .3);
+//     transition: filter .2s ease-out;
+
+//   }
+//   &:hover {
+//     .home__work__image {
+//       filter: none;
+//       // filter: brightness(1.5) grayscale(1) contrast(.5); 
+//       border-color: #9D0F5C;
+  
+//     }
+//     .home__work__title {
+//       opacity: 1;
+//     }
+//   }
+// }
