--- a/public/src/components/Home/Home__Landing/landing.scss
+++ b/public/src/components/Home/Home__Landing/landing.scss
@@ -31,7 +31,7 @@
   font: 800 55px $rajdhani;
   text-transform: uppercase;
   position: absolute;
-  color: white;
+  color: $grey;
   text-align: center;
   padding-top: 50%;
   opacity: 0;
