--- a/public/src/components/Home/Home__Transition/transition.scss
+++ b/public/src/components/Home/Home__Transition/transition.scss
@@ -12,7 +12,7 @@
   width: 100vw;
   height: 50vh;
   background: url(../../../../dist/assets/scrollText.png.svg);
-  background-color: white;
+  background-color: $black;
   background-repeat: repeat;
   background-size: auto;
   animation: 20s linear infinite slide;
@@ -22,7 +22,7 @@
 }
 .home__transition__text {
   font: Bold 80px $rajdhani;
-  color: $darkGrey;
+  color: $white;
   letter-spacing: 3.69px;
   text-transform: uppercase;
 }
