--- a/public/src/components/Home/Home__Works/works.scss
+++ b/public/src/components/Home/Home__Works/works.scss
@@ -1,7 +1,7 @@
 @import '../../App/global.scss';
 
 .home__works {
-  background: white;
+  background: $black;
   width: 100%;
   padding: 10% 0;
   display: flex;
