--- a/public/src/components/OverlayMenu/overlayMenu.scss
+++ b/public/src/components/OverlayMenu/overlayMenu.scss
@@ -1,12 +1,8 @@
 @import '../App/global.scss';
 
 $color-text: #aaa;
-$color-bg: #000;
-$color-link: #1c1cc9;
-$color-link-hover: #aaa;
-$color-info: #1c1cc9;
-$glitch-width: 100vw;
-$glitch-height: 100vh;
+
+
 $gap-horizontal: 10px;
 $gap-vertical: 5px;
 $color-title: #fff;
@@ -26,17 +22,15 @@ $blend-color-5: #32327c;
 .menuOverlay__container {
   z-index: 11;
   background: $black;
-  padding: 2em 0;
   width: 100vw;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
   position: fixed;
   top: 0;
   left: 0;
   transform: translateY(-100%);
-  color: $white;
-
+	color: $white;
+	overflow: hidden;
+	
   * {
     font-family: $rajdhani;
   }
@@ -68,6 +62,11 @@ $blend-color-5: #32327c;
       }
     }
   }
+}
+.menu__width {
+	padding: 2em 0;
+	display: flex;
+	flex-direction: column;
 }
 .menu__item {
   font-size: 50px;
@@ -121,31 +120,45 @@ $blend-color-5: #32327c;
   flex-direction: column;
   padding: 0 6%;
 
-  * {
-    border-bottom: 1px solid #f84524;
-    width: fit-content;
-  }
+  // * {
+  //   border-bottom: 1px solid #f84524;
+  //   width: fit-content;
+  // }
 }
 .nav__loader__glitch {
+	width: 200px;
+	height: 300px;
 	position: relative;
 	top: 0;
 	left: 0;
-	width: 400px;
-	height: 500px;
 	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-
+.glitch__title {
+	position: relative;
+	font: 700 50px $rajdhani;
+	text-transform: uppercase;
+	color: $grey;
+	animation-name: glitch-anim-text;
+	animation-duration: $time-anim;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	animation-delay: calc($delay-anim + $time-anim * 0.2);
+}
 .glitch__hero {
+	opacity: .5;
 	position: absolute;
 	top: calc(-1 * 5px);
 	left: calc(-1 * 10px);
 	width: calc(100% + 10px * 2);
   height: calc(100% + 5px * 2);
+  background: url(../../../dist/assets/menu__hero.png) no-repeat 50% 50%;
   background-color: $blend-mode-1;
-	background-size: contain;
+	background-size: cover;
 	transform: translate3d(0,0,0);
 	background-blend-mode: none;
-  background: url(../../../dist/assets/skyscape.jpg) no-repeat 50% 50%;
 }
 
 .glitch__hero:nth-child(n+2) {
@@ -186,12 +199,16 @@ $blend-color-5: #32327c;
 @media only screen and (min-width: 1080px) {
   .menuOverlay__container {
       // width: calc(100vw - 40%);
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-  }
-
+			padding: 0;
+		}
+	.menu__width {
+		height: 100%;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		width: 80%;
+		margin: 0 auto;
+	}
   .menu__item {
     font-size: 75px;
   }
@@ -212,10 +229,10 @@ $blend-color-5: #32327c;
     padding: 0;
     width: 100%;
   }
-  .menu__hero {
-    width: 400px;
-    height: 600px;
-  }
+	.nav__loader__glitch {
+		width: 400px;
+		height: 550px;
+	}
 }
 // text-transform: uppercase;
 // font-weight: 600;
