[edit] mobile layout changes on landing

--- a/public/src/components/Navbar/navbar.scss
+++ b/public/src/components/Navbar/navbar.scss
@@ -30,7 +30,7 @@
   color: white;
   font: Bold 38px/47px $rajdhani;
   margin-left: 36px;
-  visibility: hidden;
+  // visibility: hidden;
 }
 .glitch::before,
 .glitch::after {
