--- a/public/src/components/Home/Home__Landing/landing.scss
+++ b/public/src/components/Home/Home__Landing/landing.scss
@@ -23,26 +23,37 @@
   position: relative;
   z-index: 0;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   overflow: hidden;
+  font-family: $rajdhani;
+  font-weight: 700;
+  color: $grey;
 }
 
 .landing__header {
-  font: 800 55px $rajdhani;
+  font-size: 55px;
   text-transform: uppercase;
   position: absolute;
   color: $grey;
   text-align: center;
-  padding-top: 50%;
+  padding-top: 120%;
   opacity: 0;
 }
-
+.landing__tagline {
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 20%;
+  opacity: .9;
+}
 .landing__rect__svg {
-  transform: scale(.85);
+  margin-top: 5%;
+  transform: scale(.5 ) rotate(-90deg);
   position: absolute;
 }
 .landing__hero {
-  transform: scale(.75);
+  transform: scale(.5) translateY(-35%);
   position: absolute;
   // opacity: 0;
 }
@@ -52,11 +63,11 @@
 }
 .landing__cutoff {
   opacity: 0;
-  top: 34%;
+  top: 64%;
   position: absolute;
   display: flex;
   flex-direction: column;
-  transform: scale(.33);
+  transform: scale(.30);
 
   .bottom {
     margin-top: -.9%;
@@ -82,10 +93,10 @@
   color: white;
   z-index: 1;
   position: absolute;
-  left: 35%;
-  bottom: 20%;
+  left: 42%;
+  bottom: 5%;
   text-transform: uppercase;
-  font: 700 30px/27px $rajdhani;
+  font-size: 12px;
   letter-spacing: 5px;
   
   .mouse__text {
@@ -93,8 +104,8 @@
   }
   .mouse__text:before {
     content: '';
-    width: 50px;
-    height: 2px;
+    width: 40px;
+    height: 1px;
     position: absolute;
     background: white;
     animation: mouse 3s infinite cubic-bezier(1,.25,0,.75);
@@ -105,17 +116,29 @@
   }
 }
 @media only screen and (min-width: 1080px) {
+  .landing__tagline {
+    display: none;
+  }
   .landing__header {
-    font: 800 173px/221px $rajdhani;
+    font-size: 173px;
     padding-top: 0;
     top: 25%;
   }
   .mouse {
     left: 47%;
     bottom: 10%;
+    font-size: 30px;
+
+    .mouse__text:before {
+      width: 50px;
+      height: 2px;
+    }
   }
   .landing__hero, .landing__rect__svg {
-    transform: scale(1);
+    transform: scale(1) rotate(0) translateY(0);
+  }
+  .landing__rect__svg {
+    margin-top:0;
   }
   .landing {
     height: 100vh;
@@ -128,4 +151,5 @@
   .landing__parallax {
     visibility: visible;
   }
+
 }
