--- a/public/src/components/Home/Home__Landing/landing.scss
+++ b/public/src/components/Home/Home__Landing/landing.scss
@@ -31,12 +31,14 @@
 }
 
 .landing__header {
-  font-size: 55px;
+  font-size: 50px;
+  // 55
   text-transform: uppercase;
   position: absolute;
   color: $grey;
   text-align: center;
-  padding-top: 120%;
+  padding-top: 90%;
+  // 120
   opacity: 0;
 }
 .landing__tagline {
@@ -44,7 +46,7 @@
   font-weight: 400;
   text-transform: uppercase;
   position: absolute;
-  bottom: 20%;
+  bottom: 22%;
   opacity: .9;
 }
 .landing__rect__svg {
@@ -53,7 +55,8 @@
   position: absolute;
 }
 .landing__hero {
-  transform: scale(.5) translateY(-35%);
+  transform: scale(.5) translateY(-40%);
+  // 35
   position: absolute;
   // opacity: 0;
 }
@@ -63,15 +66,14 @@
 }
 .landing__cutoff {
   opacity: 0;
-  top: 64%;
+  top: 58%;
   position: absolute;
   display: flex;
   flex-direction: column;
-  transform: scale(.30);
+  transform: scale(.28);
 
   .bottom {
     margin-top: -.9%;
-    // transform: translateX();
   }
 }
 .landing__parallax {
@@ -104,7 +106,7 @@
   }
   .mouse__text:before {
     content: '';
-    width: 40px;
+    width: 30px;
     height: 1px;
     position: absolute;
     background: white;
@@ -113,6 +115,25 @@
     top: 45%;
     right: 115%;
 
+  }
+}
+@media only screen and (min-width: 400px) {
+  .landing__header {
+    font-size: 55px;
+    padding-top: 110%;
+  }
+  .landing__hero {
+    transform: scale(.5) translateY(-35%);
+  }
+  .landing__cutoff {
+    top: 59%;
+    transform: scale(.3);
+  }
+  .landing__tagline {
+    bottom: 25%;
+  }
+  .mouse {
+    bottom: 10%;
   }
 }
 @media only screen and (min-width: 1080px) {
