--- a/public/src/components/Navbar/navbar.scss
+++ b/public/src/components/Navbar/navbar.scss
@@ -18,6 +18,7 @@
   margin: 2em auto;
   display: flex;
   align-items: center;
+  // mix-blend-mode: difference;
   mix-blend-mode: exclusion;
   text-decoration: none;
 }
