--- a/public/src/components/App/global.scss
+++ b/public/src/components/App/global.scss
@@ -28,7 +28,7 @@ html, body {
   max-width: 100%;
   height: auto;
   overflow-x: hidden;
-  background: black;
+  background: $white;
   // background: #1F1F1F;
 }
 
