--- a/public/src/components/Loader/loader.scss
+++ b/public/src/components/Loader/loader.scss
@@ -48,7 +48,7 @@
 	justify-content: center;
 	align-items: center;
 	margin: 0 auto;
-	min-height: 100vh;
+	min-height: 80vh;
 
 }
 
@@ -389,6 +389,9 @@
 }
 
 @media only screen and (min-width: 1080px) {
+	.loader__container {
+		height: 100vh;
+	}
 	.loader__title {
 		font: 700 200px $rajdhani;
 	}
