--- a/public/src/components/App/global.scss
+++ b/public/src/components/App/global.scss
@@ -28,8 +28,8 @@ html, body {
   max-width: 100%;
   height: auto;
   overflow-x: hidden;
-  background: $white;
-  // background: #1F1F1F;
+  // background: $white;
+  background: #1F1F1F;
 }
 
 // $landing: 
