--- a/public/src/components/App/global.scss
+++ b/public/src/components/App/global.scss
@@ -29,7 +29,7 @@ html, body {
   height: auto;
   overflow-x: hidden;
   // background: $white;
-  background: #1F1F1F;
+  background: $black;
 }
 
 // $landing: 
