--- a/public/src/components/Home/Home__Transition/transition.scss
+++ b/public/src/components/Home/Home__Transition/transition.scss
@@ -1,12 +1,8 @@
 @import '../../App/global.scss';
 
 @keyframes slide-right {
-  from {
-    background-position-x: 0;
-  }
-  to {
-    background-position-x: 100%;
-  }
+  0% { background-position-x: 0; }
+  100% { background-position-x: 100%; }
 }
 @keyframes slide-left {
   0% { right: 0; }
