--- a/public/src/components/Home/Home__Works/works.scss
+++ b/public/src/components/Home/Home__Works/works.scss
@@ -4,8 +4,8 @@
   background: $white;
   max-width: 100%;
   padding: 3em 1em;
-  text-transform: uppercase;
   font-family: $rajdhani;
+  color: $black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,32 +32,14 @@
     width: 100%;
   }
 }
-.works__button {
-  border: 4px solid $black;
-  background: none;
-  padding: 5px 10px;
-  font-size: 20px;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: inherit;
-  cursor: pointer;
-
-  &::before, &::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    background: $black;
-  }
-  &:hover {
-    left: 100%;
-  }
-}
 .home__work__title {
-  font: 700 50px $rajdhani;
+  font-size: 50px;
+  font-weight: 500;
   text-align: center;
   color: $black;
   transition: opacity .3s ease-in;
+  text-transform: lowercase;
+  line-height: 1.6;
 }
 
 @media only screen and (min-width: 1080px) {
@@ -75,12 +57,9 @@
     }
   }
   .home__work__title {
-    font: 700 114px $rajdhani;
+    font-size: 114px;
+  }
 
-  }
-  .works__button {
-    font-size: 40px;
-  }
 }
 
 
