[edit] parallax mvp

--- a/public/src/components/App/global.scss
+++ b/public/src/components/App/global.scss
@@ -27,7 +27,7 @@ html, body {
   padding: 0;
   z-index: 1;
   max-width: 100%;
-  height: auto;
+  // height: 100%;
   overflow-x: hidden;
   // background: $white;
   background: $black;
