--- a/public/src/components/Home/Home__Transition/transition.scss
+++ b/public/src/components/Home/Home__Transition/transition.scss
@@ -11,7 +11,7 @@
 
 .home__transition {
   width: 100vw;
-  background-color: $white;
+  background-color: white;
   flex-direction: column;
   display: flex;
   justify-content: center;
