--- a/public/src/components/Utils/styles/button.scss
+++ b/public/src/components/Utils/styles/button.scss
@@ -20,7 +20,7 @@
       to right,
       $black,
       $black 50%,
-      $white 50%);
+      white 50%);
   background-size: 200% 100%;
   background-position: 100%;
 
