--- a/public/src/components/Utils/styles/workGrid.scss
+++ b/public/src/components/Utils/styles/workGrid.scss
@@ -14,12 +14,18 @@
 .grid__image {
   border: 4px solid $darkGrey;
   transition: filter .3s ease-in;
+
+  &:hover {
+    filter: brightness(1.1) saturate(.5);
+  }
 }
 .grid__image--1 {
+  position: absolute;
   z-index: 2;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   width: 300px;
+  // max-width: 450px;
 }
 
 .grid__image--2 {
