--- a/public/src/components/Home/Home__Works/works.scss
+++ b/public/src/components/Home/Home__Works/works.scss
@@ -1,8 +1,7 @@
 @import '../../App/global.scss';
 
 .home__works {
-  position: relative;
-  // height: 3240px;
+  // position: relative;
   background: 
     linear-gradient(90deg, $grey 2px, transparent 2px);
   background-size: calc(100vw/6);
@@ -18,8 +17,8 @@
 .layout {
   position: relative;
   width: 95%;
-  height: 100vh;
-  margin: 0 auto;
+  // height: 100vh;
+  margin: 5% auto;
   display: flex;
   align-items: center;
   flex-direction: column-reverse;
@@ -41,7 +40,7 @@
 .home__work__title {
   font-size: 50px;
   font-weight: 500;
-  text-align: center;
+  // text-align: left;
   color: $black;
   transition: opacity .3s ease-in;
   text-transform: lowercase;
@@ -50,17 +49,31 @@
   &::selection {
     background: $pink;
   }
+
+  &::before {
+    content: '';
+    position: absolute;
+    border-bottom: 6px solid $black;
+    width: 8%;
+    bottom: 35%;
+  }
 }
 
 @media only screen and (min-width: 1080px) {
   .layout {
-    max-width: 80%;
+    max-width: 70%;
     flex-direction: row;
     justify-content: space-between;
 
-    &__item--body {
-      padding-top: 0;
+    &__item {
+      // align-items: flex-start;
+      // margin-left: 20%;
+      
+      &--body {
+        padding-top: 0;
+      }
     }
+
 
     &:nth-child(odd) {
       flex-direction: row-reverse; // 3
